# TitanicApp

./: .gitignore  README.md  docker-compose.yml  main.tex  pomoc.txt
api/: .env  app.py  db_connection.py  dockerfile  pyproject.toml
api/dto/: CrewMember.py
api/models/: CrewMember.py
api/orm/: CrewMember.py
charts/: Chart.yaml  values.yaml
charts/templates/: api.yaml  configmap.yaml  db-volumes.yaml  db.yaml  keycloak.yaml  ml.yaml  webapp.yaml
database/: .env  Dockerfile  setup.sql
ml-client/: app.py  dockerfile  pyproject.toml
ml-client/Ai-model/: model.pkl  scaler.pkl
ml-client/notebooks/: model.pkl  nb.ipynb  notebook.ipynb  scaler.pkl
scripts/: createdb.sh  k8s.sh  network.sh  runapi.sh
web/: .env  package-lock.json  package.json  script.sh
web/src/: App.js  Keycloak.js  config.js
web/src/api/: DatabaseApi.js  PredictionApi.js
web/src/components/: CrewMember.js  CrewMembers.js  DeleteButton.js  Nav.js  PredictionForm.js
web/src/helpers/: PrivateRoute.js
web/src/pages/: AdminPage.js  LoggedPage.js  LoginPage.js  PredictionPage.js  SecuredPage.js
web/src/styles/: LoginPage.css
