[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for comunication with the DB"
authors = ["barteooo <bartlomiejwnuk03@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
